--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.80.9",
     "@react-three/fiber": "^8.13.7",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
