--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "3d-shoes-viewer",
+  "homepage": "https://srain66.github.io/3d-shoes-viewer/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
