--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "three": "^0.156.0",
+    "three-stdlib": "^2.25.1",
     "typescript": "5.2.2"
   }
 }
